--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,11 @@
   "dependencies": {
     "express": "^4.18.1",
     "google-auth-library": "^8.0.2",
-    "node-fetch": "^3.2.6",
+    "mongodb": "^4.7.0",
     "web3": "^1.7.3"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node src/server.js"
   },
   "name": "backend",
   "version": "1.0.0",
