--- a/tyfw-server-spec.yaml
+++ b/tyfw-server-spec.yaml
@@ -1,97 +1,247 @@
 swagger: '2.0'
 info:
   description: |
-    This is a sample Petstore server.  You can find 
-    out more about Swagger at 
-    [http://swagger.io](http://swagger.io) or on 
-    [irc.freenode.net, #swagger](http://swagger.io/irc/).
+    This is the backend for the TYFW: Track Your Friend's Wallets app for CPEN 321 
   version: 1.0.0
-  title: Swagger Petstore
-  termsOfService: http://swagger.io/terms/
+  title: TYFW
   contact:
-    email: apiteam@swagger.io
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
+    email: dryden.wiebe@gmail.com
 # host: petstore.swagger.io
 # basePath: /v2
 tags:
-- name: pet
-  description: Everything about your Pets
-  externalDocs:
-    description: Find out more
-    url: http://swagger.io
-- name: store
-  description: Access to Petstore orders
+- name: user
+  description: The user of this app
 # schemes:
 # - http
 paths:
-  /user/create:
-    post:
+  /user/authenticate:
+    get:
       tags:
       - user
-      summary: Create user
-      description: This can only be done by the logged in user.
-      operationId: createUser
+      summary: Authenticate user with Google sign in 
+      operationId: authenticate
       produces:
       - application/json
       - application/xml
       parameters:
       - in: body
-        name: body
-        description: Created user object
+        name: userAuthenticate
         required: true
         schema:
-          $ref: '#/definitions/User'
+          $ref: '#/definitions/UserAuthenticate'
       responses:
         default:
-          description: successful operation
+          description: Successful operation
         400:
-          description: Invalid wallet address
-  /user/getbalance:
-    get:
+          description: Authentication failed
+  /user/register:
+    post:
       tags:
       - user
-      summary: Get user by user name
-      operationId: getBalance
+      summary: Register an unregistered user
+      operationId: register
       produces:
       - application/json
       - application/xml
       parameters:
-      - name: idtoken
+      - name: register
         in: body
-        description: The google auth generated user token that identifies this user
         required: true
         schema:
-          $ref: '#/definitions/IdToken'
+          $ref: '#/definitions/RegisterUser'
+      responses:
+        200:
+          description: successful operation
+        400:
+          description: Username already used
+        401:
+          description: Failure
+  /user/getleaderboard:
+    get:
+      tags:
+      - user
+      summary: Get the leaderboard to display to a user
+      operationId: getLeaderboard
+      produces:
+      - application/json
+      - application/xml
+      parameters:
+      - name: getLeaderboard
+        in: body
+        required: true
+        schema:
+          $ref: '#/definitions/GetLeaderboard'
       responses:
         200:
           description: successful operation
           schema:
-            $ref: '#/definitions/WalletBalance'
+            type: array
+            items:
+              $ref: '#/definitions/LeaderboardRow'
         400:
-          description: Invalid username supplied
-        404:
-          description: User not found
-securityDefinitions:
-  petstore_auth:
-    type: oauth2
-    authorizationUrl: http://petstore.swagger.io/oauth/dialog
-    flow: implicit
-    scopes:
-      write:pets: modify pets in your account
-      read:pets: read your pets
-  api_key:
-    type: apiKey
-    name: api_key
-    in: header
+          description: Username already used
+        401:
+          description: Failure
+  /user/display:
+    get:
+      tags:
+      - user
+      summary: Displays the wallet of the current user
+      operationId: display
+      produces:
+      - application/json
+      - application/xml
+      parameters:
+      - name: display
+        in: body
+        required: true
+        schema:
+          $ref: '#/definitions/Display'
+      responses:
+        200:
+          description: successful operation
+          schema:
+              $ref: '#/definitions/DisplayReturn'
+        401:
+          description: Failure
+  /user/displayotheruserbyusername:
+    get:
+      tags:
+      - user
+      summary: Displays the wallet of another user by username
+      operationId: displayotheruserbyusername
+      produces:
+      - application/json
+      - application/xml
+      parameters:
+      - name: displayotheruserbyusername
+        in: body
+        required: true
+        schema:
+          $ref: '#/definitions/DisplayOtherUserbyUsername'
+      responses:
+        200:
+          description: successful operation
+          schema:
+              $ref: '#/definitions/DisplayReturn'
+        401:
+          description: Failure
+  /user/displayotheruserbyaddress:
+    get:
+      tags:
+      - user
+      summary: Displays the wallet of another user by wallet address
+      operationId: displayotheruserbyaddress
+      produces:
+      - application/json
+      - application/xml
+      parameters:
+      - name: displayotheruserbyaddress
+        in: body
+        required: true
+        schema:
+          $ref: '#/definitions/DisplayOtherUserbyAddress'
+      responses:
+        200:
+          description: successful operation
+          schema:
+              $ref: '#/definitions/DisplayReturn'
+        401:
+          description: Failure
+  /user/changename:
+    get:
+      tags:
+      - user
+      summary: Changes the name of the user
+      operationId: changename
+      produces:
+      - application/json
+      - application/xml
+      parameters:
+      - name: changename
+        in: body
+        required: true
+        schema:
+          $ref: '#/definitions/ChangeName'
+      responses:
+        200:
+          description: successful operation
+        401:
+          description: Failure
+  /user/search:
+    get:
+      tags:
+      - user
+      summary: Search by username/wallet address
+      operationId: search
+      produces:
+      - application/json
+      - application/xml
+      parameters:
+      - name: search
+        in: body
+        required: true
+        schema:
+          $ref: '#/definitions/Search'
+      responses:
+        200:
+          description: successful operation
+          schema:
+            $ref: '#/definitions/SearchResult'
+        401:
+          description: Failure
+  /user/addbyusername:
+    get:
+      tags:
+      - user
+      summary: Add friend by username
+      operationId: addbyusername
+      produces:
+      - application/json
+      - application/xml
+      parameters:
+      - name: addbyusername
+        in: body
+        required: true
+        schema:
+          $ref: '#/definitions/AddByUsername'
+      responses:
+        200:
+          description: successful operation
+        401:
+          description: Failure
+  /user/addbywalletaddress:
+    get:
+      tags:
+      - user
+      summary: Add friend by wallet address
+      operationId: addbywalletaddress
+      produces:
+      - application/json
+      - application/xml
+      parameters:
+      - name: add by wallet address
+        in: body
+        required: true
+        schema:
+          $ref: '#/definitions/AddByWalletAddress'
+      responses:
+        200:
+          description: successful operation
+        401:
+          description: Failure
 definitions:
-  User:
+  UserAuthenticate:
     type: object
     properties:
-      idToken:
+      email:
         type: string
-      username:
+      googleIdToken:
+        type: string
+  RegisterUser:
+    type: object
+    properties:
+      email:
         type: string
       firstName:
         type: string
@@ -99,42 +249,105 @@ definitions:
         type: string
       walletAddress:
         type: string
-    xml:
-      name: User
-  IdToken:
-    type: object
-    properties:
-      idToken:
+      googleIdToken:
         type: string
-    xml:
-      name: IdToken
-  WalletBalance:
+  GetLeaderboard:
     type: object
     properties:
-      coinValue:
+      email:
+        type: string
+      googleIdToken:
+        type: string
+  LeaderboardRow:
+    type: object
+    properties:
+      user:
+        type: string
+      value:
         type: number
-      dollarValue:
-        type: number
-      timeSeries:
+  Display:
+    type: object
+    properties:
+      email:
+        type: string
+      googleIdToken:
+        type: string
+      numPoints:
+        type: integer
+  DisplayReturn:
+    type: object
+    properties:
+      startTime:
+        type: integer
+      endTime:
+        type: integer
+      numPoints:
+          type: string
+          enum: [hour, day, month]
+      values:
         type: array
         items:
           type: number
-    xml:
-      name: WalletBalance
-  ApiResponse:
+  DisplayOtherUserbyUsername:
     type: object
     properties:
-      code:
+      email:
+        type: string
+      googleIdToken:
+        type: string
+      otherUsername:
+        type: string
+      numPoints:
         type: integer
-        format: int32
-      type:
+  DisplayOtherUserbyAddress:
+    type: object
+    properties:
+      email:
         type: string
-      message:
+      googleIdToken:
         type: string
-externalDocs:
-  description: Find out more about Swagger
-  url: http://swagger.io
-# Added by API Auto Mocking Plugin
+      otherUsername:
+        type: string
+      numPoints:
+        type: integer
+  ChangeName:
+    type: object
+    properties:
+      nameIdentifier:
+        type: string
+        enum: [first, last]
+      googleIdToken:
+        type: string
+      newName:
+        type: string
+  Search:
+    type: object
+    properties:
+      query:
+        type: string
+      googleIdToken:
+        type: string
+  SearchResult:
+    type: object
+    properties:
+      query:
+        type: string
+      googleIdToken:
+        type: string
+  AddByUsername:
+    type: object
+    properties:
+      friendUsername:
+        type: string
+      googleIdToken:
+        type: string
+  AddByWalletAddress:
+    type: object
+    properties:
+      friendWalletAddress:
+        type: string
+      googleIdToken:
+        type: string
 host: virtserver.swaggerhub.com
 basePath: /drydenwiebe/tyfw/1.0.0
 schemes:
