Add search results

--- a/frontend/app/src/main/AndroidManifest.xml
+++ b/frontend/app/src/main/AndroidManifest.xml
@@ -26,10 +26,13 @@
             android:label="AuthActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".SearchResultsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_search_results" />
         <activity
             android:name=".MainActivity"
             android:exported="false"
