--- a/frontend/app/build.gradle
+++ b/frontend/app/build.gradle
@@ -1,3 +1,4 @@
+
 plugins {
     id 'com.android.application'
 }
@@ -32,6 +33,10 @@ android {
     }
 }
 
+repositories {
+    maven { url 'https://jitpack.io' }
+}
+
 dependencies {
     // For google sign in
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
@@ -48,4 +53,12 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation 'com.opencsv:opencsv:5.6'
 }
+
+
+
+
+
