--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "google-auth-library": "^8.0.2",
     "mongodb": "^4.7.0",
