--- a/frontend/app/build.gradle
+++ b/frontend/app/build.gradle
@@ -12,6 +12,7 @@ android {
         targetSdk 32
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -40,6 +41,10 @@ repositories {
 dependencies {
     // For google sign in
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
+
+    // For API calls
+    implementation 'com.amitshekhar.android:android-networking:1.0.2'
+    implementation 'com.android.support:multidex:1.0.3'
 
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
