--- a/frontend/app/build.gradle
+++ b/frontend/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.opencsv:opencsv:5.6'
+    implementation 'com.amitshekhar.android:android-networking:1.0.2'
 }
 
 
