--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@binance/connector": "^1.11.0",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "google-auth-library": "^8.0.2",
