--- a/frontend/app/src/main/AndroidManifest.xml
+++ b/frontend/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         <activity
             android:name=".AuthActivity"
             android:exported="true"
-            android:label="AuthActivity">
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -39,12 +39,10 @@
         </activity>
         <activity
             android:name=".SearchResultsActivity"
-            android:exported="false"
-            android:label="@string/title_activity_search_results" />
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false"
-            android:label="@string/app_name" />
+            android:exported="false" />
     </application>
 
 </manifest>
