--- a/frontend/app/build.gradle
+++ b/frontend/app/build.gradle
@@ -58,7 +58,13 @@ dependencies {
     implementation 'androidx.preference:preference:1.1.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+
+    // For testing
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
+
     implementation 'androidx.appcompat:appcompat:1.4.2'
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
