--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,6 +5,10 @@ name: Node.js CI
 
 on:
   push
+  
+defaults:
+  run:
+    working-directory: ./backend
 
 jobs:
   build:
@@ -17,13 +21,11 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-    - run: |
-        cd backend
-        npm ci
-        npm test
-      #uses: actions/setup-node@v3
-      #with:
-        #node-version: ${{ matrix.node-version }}
-        #cache: 'npm'
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
