--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,10 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "google-auth-library": "^8.0.2",
+    "graylog2": "^0.2.1",
     "mongodb": "^4.7.0",
-    "web3": "^1.7.3"
+    "web3": "^1.7.3",
+    "websocket": "^1.0.34"
   },
   "scripts": {
     "start": "node src/server.js",
