--- a/frontend/app/src/main/AndroidManifest.xml
+++ b/frontend/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <application
         android:name=".App"
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -18,6 +19,12 @@
         android:theme="@style/Theme.Tyfw"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".AiPredictionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.social.ChatActivity"
+            android:exported="false" />
         <activity
             android:name=".AiPredictionActivity"
             android:exported="false" />
@@ -33,7 +40,8 @@
             android:label="@string/title_activity_login" />
         <activity
             android:name=".AuthActivity"
-            android:exported="true">
+            android:exported="true"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -42,6 +50,9 @@
         </activity>
         <activity
             android:name=".SearchResultsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.social.ChatActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
