--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,12 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+
+      - name: Start MongoDB
+        uses: supercharge/mongodb-github-action@1.7.0
+          with:
+        mongodb-version: ${{ matrix.mongodb-version }}
+
       - run: |
           touch .env
           echo CLIENT_ID=${{ secrets.CLIENT_ID }} >> .env
