--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,6 +18,7 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x]
+        mongodb-version: [5.0]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
