--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "node src/server.js",
-    "test": "jest --coverage"
+    "test": "NODE_ENV=test jest --coverage"
   },
   "name": "backend",
   "version": "1.0.0",
